--- a/_posts/2012-11-27-基于http的文件传输.md
+++ b/_posts/2012-11-27-基于http的文件传输.md
@@ -1,5 +1,7 @@
 ---
-layout: default
+layout: post
+category: Python
+tags: python库
 title: 基于HTTP的文件传输 Python
 ---
 因为需要最近看了一下通过POST请求传输文件的内容 并且自己写了Server和Client实现了一个简单的机遇HTTP的文件传输工具
