--- a/_posts/2013-07-07-Python的闭包与装饰器.md
+++ b/_posts/2013-07-07-Python的闭包与装饰器.md
@@ -1,5 +1,7 @@
 ---
-layout: default
+layout: post
+category: Python
+tags: Python技巧
 title: Python的闭包与装饰器
 ---
 很久以前就注意到了这个问题，当时也看了些资料，不过这个问题确实有点难，当时没看懂也就放下了，知道前几天面试的时候被问到Python的闭包，结果没答上来。所以好好的把闭包和装饰器看了下。
