--- a/_posts/2013-09-08-快速的Python性能优化.md
+++ b/_posts/2013-09-08-快速的Python性能优化.md
@@ -1,5 +1,7 @@
 ---
-layout: default
+layout: post
+category: Python
+tags: Python技巧
 title: 快速的Python性能优化(翻译)
 ---
  在微博上看到了一遍文章，然后就试着翻译了一下，有些地方看不懂，就直接贴原文了，还望能看懂的人指点一下。
